# web-crawler-pratham

./: .gitmodules  CMakeLists.txt
docs/build_logs/: build_log_18th_july.md  build_log_22nd_july.md  build_logs_20th_july.md
docs/daily_journel/: journel_18th_july.md  journel_20th_july.md  journel_22nd_july.md
docs/design_proposal/: crawler_dproposal.md  crawler_dproposal_v2.md
include/: crawler.h  fetcher.h  frontier.h  link_extractor.h  page_storage.h  seen_store.h  url_normalizer.h
src/crawler/: crawler.cpp
src/fetcher/: fetcher.cpp
src/frontier/: frontier.cpp
src/link_extractor/: link_extractor.cpp
src/page_storage/: page_storage.cpp
src/seen_store/: seen_store.cpp
src/url_normalizer/: url_normalizer.cpp
